OLMIS-5385: updated template service
