# src/main/java/org/openlmis/template/web/BaseController.java
@@ -17,6 +17,7 @@ package org.openlmis.template.web;
 
 import java.util.List;
 import java.util.UUID;
+import javax.annotation.Resource;
 import org.apache.commons.lang3.StringUtils;
 import org.javers.core.Javers;
 import org.javers.core.changelog.SimpleTextChangeLog;
@@ -24,15 +25,33 @@ import org.javers.core.diff.Change;
 import org.javers.core.json.JsonConverter;
 import org.javers.repository.jql.QueryBuilder;
 import org.openlmis.template.util.Pagination;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-@RequestMapping("/api")
+@RequestMapping(BaseController.API_PATH)
 public abstract class BaseController {
 
-  @Autowired
+  protected static final String API_PATH = "/api";
+
+  @Resource(name = "javersProvider")
   private Javers javers;
+
+  protected ResponseEntity<String> getAuditLogResponse(Class type, UUID id, String author,
+      String changedPropertyName,
+      Pageable page, boolean returnJson) {
+    String auditLogs = getAuditLog(type, id, author, changedPropertyName, page, returnJson);
+
+    MediaType contentType = returnJson ? MediaType.APPLICATION_JSON : MediaType.TEXT_PLAIN;
+
+    HttpHeaders headers = new HttpHeaders();
+    headers.setContentType(contentType);
+
+    return new ResponseEntity<>(auditLogs, headers, HttpStatus.OK);
+  }
 
   /**
    * <p>
@@ -44,25 +63,13 @@ public abstract class BaseController {
    * </p>
    * See getAuditedChanges() for a list and explanation of the available parameters.
    */
-  protected String getAuditLog(Class type, UUID id, String author, String changedPropertyName,
-                               Pageable page, boolean returnJson) {
+  private String getAuditLog(Class type, UUID id, String author, String changedPropertyName,
+      Pageable page, boolean returnJson) {
     if (returnJson) {
       return getAuditLogJson(type, id, author, changedPropertyName, page);
     } else {
       return getAuditLogText(type, id, author, changedPropertyName, page);
     }
-  }
-
-  /**
-   * Return a list of audited changes via JSON.
-   * @param type The type of class for which we wish to retrieve historical changes.
-   */
-  protected String getAuditLogJson(Class type) {
-    return getAuditLogJson(type, null, null, null, null);
-  }
-
-  protected String getAuditLogJson(Class type, UUID id) {
-    return getAuditLogJson(type, id, null, null, null);
   }
 
   /**
@@ -77,8 +84,8 @@ public abstract class BaseController {
    *               If null or empty, changes associated with any and all properties are returned.
    * @param page A Pageable object with PageNumber and PageSize values used for pagination.
    */
-  protected String getAuditLogJson(Class type, UUID id, String author,
-                                     String changedPropertyName, Pageable page) {
+  private String getAuditLogJson(Class type, UUID id, String author,
+      String changedPropertyName, Pageable page) {
     List<Change> changes = getChangesByType(type, id, author, changedPropertyName, page);
     JsonConverter jsonConverter = javers.getJsonConverter();
     return jsonConverter.toJson(changes);
@@ -87,32 +94,13 @@ public abstract class BaseController {
 
   /**
    * Return a list of changes as a log (in other words, as a series of line entries).
-   * @param type The type of class for which we wish to retrieve historical changes.
-   */
-  protected String getAuditLogText(Class type) {
-    return getAuditLogText(type, null, null, null, null);
-  }
-
-  /**
-   * Return a list of changes as a log (in other words, as a series of line entries).
-   * @param type The type of class for which we wish to retrieve historical changes.
-   * @param id The ID of class for which we wish to retrieve historical changes.
-   *           If null, entries are returned regardless of their ID.
-   */
-  protected String getAuditLogText(Class type, UUID id) {
-    return getAuditLogText(type, id, null, null, null);
-  }
-
-  /**
-   * Return a list of changes as a log (in other words, as a series of line entries).
    * The available parameters and their means are the same as for the getChangesByClass() method.
    */
-  protected String getAuditLogText(Class type, UUID id, String author,
-                                   String changedPropertyName, Pageable page) {
+  private String getAuditLogText(Class type, UUID id, String author,
+      String changedPropertyName, Pageable page) {
     List<Change> changes = getChangesByType(type, id, author, changedPropertyName, page);
     return javers.processChangeList(changes, new SimpleTextChangeLog());
   }
-
 
   /*
     Return JaVers changes for the specified type, optionally filtered by id, author, and property.
@@ -142,11 +130,10 @@ public abstract class BaseController {
     /* Depending on the business' preference, we can either use findSnapshots() or findChanges().
        Whereas the former returns the entire state of the object as it was at each commit, the later
        returns only the property and values which changed. */
-    //List<Change> changes = javers.findSnapshots(queryBuilder.build());
     List<Change> changes = javers.findChanges(queryBuilder.build());
 
     changes.sort((o1, o2) -> -1 * o1.getCommitMetadata().get().getCommitDate()
-                                  .compareTo(o2.getCommitMetadata().get().getCommitDate()));
+        .compareTo(o2.getCommitMetadata().get().getCommitDate()));
     return changes;
   }
 
